This should fix #12/#16 and #13, i. e. "Package.activateConfig is deprecated" and "Package.getActivationCommands is deprecated".

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "linter-htmlhint",
   "linter-package": true,
-  "activationEvents": [],
+  "activationCommands": {},
   "main": "./lib/init",
   "version": "0.0.13",
   "description": "Linter plugin for HTML, using htmlhint",
