- custom htmlhint with new line json object stream format that is   compliant with atom-linter fields - consume data faster by interfacing directly with BufferedNodeProcess - attempt to kill htmlhint process if pane is destroyed

--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
   },
   "dependencies": {
     "atom-linter": "~3.3.0",
-    "htmlhint": "~0.9.12"
+    "htmlhint": "admosity/HTMLhint#mini-format"
   }
 }
