--- a/package.json
+++ b/package.json
@@ -1,25 +1,65 @@
 {
   "name": "linter-htmlhint",
+  "version": "0.2.2",
+  "private": true,
+  "description": "A plugin for Atom Linter providing an interface to HTMLHint.",
+  "main": "lib/index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/AtomLinter/linter-htmlhint.git"
+  },
+  "engines": {
+    "atom": ">=1.0.0 <2.0.0"
+  },
+  "scripts": {
+    "test": "eslint ."
+  },
+  "keywords": [
+    "html",
+    "lint",
+    "htmlhint"
+  ],
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/AtomLinter/linter-htmlhint/issues"
+  },
+  "homepage": "https://github.com/AtomLinter/linter-htmlhint#readme",
+  "dependencies": {
+    "atom-linter": "~4.3.1",
+    "atom-package-deps": "^3.0.7",
+    "htmlhint": "~0.9.12"
+  },
+  "devDependencies": {
+    "eslint": "^1.10.3",
+    "babel-eslint": "^4.1.5",
+    "eslint-config-airbnb": "^3.0.2"
+  },
+  "eslintConfig": {
+    "rules": {
+      "comma-dangle": [
+        2,
+        "never"
+      ],
+      "no-console": 0
+    },
+    "extends": "airbnb/base",
+    "parser": "babel-eslint",
+    "globals": {
+      "atom": true
+    },
+    "env": {
+      "es6": true,
+      "node": true
+    }
+  },
+  "package-deps": [
+    "linter"
+  ],
   "providedServices": {
     "linter": {
       "versions": {
         "1.0.0": "provideLinter"
       }
     }
-  },
-  "main": "./lib/init",
-  "version": "0.2.2",
-  "description": "Linter plugin for HTML, using htmlhint",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/AtomLinter/linter-htmlhint.git"
-  },
-  "license": "MIT",
-  "engines": {
-    "atom": ">0.50.0"
-  },
-  "dependencies": {
-    "atom-linter": "~4.3.1",
-    "htmlhint": "~0.9.12"
   }
 }
