--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
   },
   "homepage": "https://github.com/AtomLinter/linter-htmlhint#readme",
   "dependencies": {
-    "atom-linter": "~4.3.1",
+    "atom-linter": "^4.3.4",
     "atom-package-deps": "^3.0.7",
     "htmlhint": "~0.9.12"
   },
   "devDependencies": {
     "eslint": "^1.10.3",
-    "babel-eslint": "^4.1.5",
+    "babel-eslint": "^4.1.6",
     "eslint-config-airbnb": "^4.0.0"
   },
   "eslintConfig": {
