Update eslint & eslint-config-airbnb
Add eslint-plugin-react to avoid warning message for peerDependency

--- a/package.json
+++ b/package.json
@@ -30,8 +30,9 @@
     "htmlhint": "~0.9.12"
   },
   "devDependencies": {
-    "eslint": "^2.4.0",
-    "eslint-config-airbnb": "^6.1.0"
+    "eslint": "^2.5.1",
+    "eslint-config-airbnb": "^6.2.0",
+    "eslint-plugin-react": "^4.2.3"
   },
   "eslintConfig": {
     "rules": {
