--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "htmlhint": "~0.9.12"
   },
   "devDependencies": {
-    "eslint": "^2.5.1",
-    "eslint-config-airbnb": "^7.0.0",
-    "eslint-plugin-react": "^5.0.1"
+    "eslint": "^2.8.0",
+    "eslint-config-airbnb-base": "^1.0.0",
+    "eslint-plugin-import": "^1.5.0"
   },
   "eslintConfig": {
     "rules": {
@@ -40,9 +40,17 @@
         2,
         "never"
       ],
-      "no-console": 0
+      "global-require": 0,
+      "import/no-unresolved": [
+        2,
+        {
+          "ignore": [
+            "atom"
+          ]
+        }
+      ]
     },
-    "extends": "airbnb/base",
+    "extends": "airbnb-base",
     "globals": {
       "atom": true
     },
