--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   "dependencies": {
     "atom-linter": "^4.6.1",
     "atom-package-deps": "^4.0.1",
-    "htmlhint": "~0.9.12"
+    "htmlhint": "~0.9.12",
+    "tiny-promisify": "^0.1.1"
   },
   "devDependencies": {
     "eslint": "^2.9.0",
