--- a/circle.yml
+++ b/circle.yml
@@ -4,13 +4,18 @@ dependencies:
     - sudo dpkg --install atom-amd64.deb || true
     - sudo apt-get update
     - sudo apt-get -f install
-    - apm install
+    - npm install
+
 test:
   override:
+    - npm run lint
+    # Remove the node_modules installed with the system npm to test real apm install
+    - rm -Rf node_modules
     - atom -v
     - apm -v
+    - apm install --production
     - apm test
 
 machine:
   node:
-    version: 6.1.0
+    version: 6
