--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,21 @@
 # Project specific config
-os:
-  - linux
-  - osx
-
-env:
-  matrix:
-    - ATOM_CHANNEL=stable
-    - ATOM_CHANNEL=beta
 
 # Installed for linting the project
 language: node_js
-node_js: "6"
+
+matrix:
+  include:
+    - os: linux
+      env: ATOM_CHANNEL=stable
+      node_js: "6"
+
+    - os: linux
+      env: ATOM_CHANNEL=beta
+      node_js: "6"
+
+    - os: osx
+      env: ATOM_CHANNEL=stable
+      node_js: "6"
 
 # Generic setup follows
 script: 'curl -Ls https://github.com/Arcanemagus/ci/raw/atomlinter/build-package.sh | sh'
