--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-# Project specific config
+### Project specific config ###
 
 # Installed for linting the project
 language: node_js
@@ -17,8 +17,15 @@ matrix:
       env: ATOM_CHANNEL=stable
       node_js: "6"
 
-# Generic setup follows
-script: 'curl -Ls https://github.com/Arcanemagus/ci/raw/atomlinter/build-package.sh | sh'
+env:
+  global:
+    - ATOM_LINT_WITH_BUNDLED_NODE="false"
+
+### Generic setup follows ###
+script: 'curl -s https://raw.githubusercontent.com/atom/ci/master/build-package.sh | sh'
+
+# Needed to disable the auto-install step running `npm install`
+install: true
 
 notifications:
   email:
