--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,7 @@
-# Project specific config
+### Project specific config ###
 environment:
+  ATOM_LINT_WITH_BUNDLED_NODE: "false"
+
   matrix:
   - ATOM_CHANNEL: stable
   - ATOM_CHANNEL: beta
@@ -8,9 +10,9 @@ install:
   # Install Node.js to run any configured linters
   - ps: Install-Product node 6
 
-# Generic setup follows
+### Generic setup follows ###
 build_script:
-  - ps: iex ((new-object net.webclient).DownloadString('https://github.com/Arcanemagus/ci/raw/atomlinter/build-package.ps1'))
+  - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/atom/ci/master/build-package.ps1'))
 
 branches:
   only:
