Update CI configuration
Just some fixes to how the script is executed from atom/ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,10 @@ matrix:
       env: ATOM_CHANNEL=stable
 
 ### Generic setup follows ###
-script: 'curl -s https://raw.githubusercontent.com/atom/ci/master/build-package.sh | sh'
+script:
+  - curl -s -O https://raw.githubusercontent.com/atom/ci/master/build-package.sh
+  - chmod u+x build-package.sh
+  - ./build-package.sh
 
 notifications:
   email:
