--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "atom-linter": "^8.0.0",
     "atom-package-deps": "^4.0.1",
     "htmlhint": "0.9.13",
+    "lazy-req": "^1.1.0",
     "strip-json-comments": "^2.0.1",
     "tiny-promisify": "^0.1.1"
   },
