--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
   "devDependencies": {
     "eslint": "^4.6.0",
     "eslint-config-airbnb-base": "^12.0.0",
-    "eslint-plugin-import": "^2.7.0"
+    "eslint-plugin-import": "^2.7.0",
+    "jasmine-fix": "^1.3.1"
   },
   "eslintConfig": {
     "rules": {
