--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   "homepage": "https://github.com/AtomLinter/linter-htmlhint#readme",
   "dependencies": {
     "atom-linter": "^10.0.0",
-    "atom-package-deps": "^4.0.1",
+    "atom-package-deps": "^4.6.0",
     "htmlhint": "0.9.13",
     "strip-json-comments": "^2.0.1",
     "tiny-promisify": "^1.0.0"
@@ -75,6 +75,7 @@
       "atom": true
     },
     "env": {
+      "browser": true,
       "node": true
     }
   },
