Add config option to disable linter-htmlhint when not .htmlhintrc found
The formattig is taken from the linter-eslint
(https://github.com/AtomLinter/linter-eslint) package.

--- a/package.json
+++ b/package.json
@@ -25,6 +25,11 @@
       "items": {
         "type": "string"
       }
+    },
+    "disableWhenNoHtmhintConfig": {
+      "title": "Disable when no HTMLHint config is found",
+      "type": "boolean",
+      "default": true
     }
   },
   "scripts": {
