--- a/package.json
+++ b/package.json
@@ -25,6 +25,11 @@
       "items": {
         "type": "string"
       }
+    },
+    "disableWhenNoHtmlhintConfig": {
+      "title": "Disable when no HTMLHint config is found",
+      "type": "boolean",
+      "default": true
     }
   },
   "scripts": {
