ci: upgrade travis distro to fix atom beta channel tests
fix for https://github.com/atom/ci/issues/94

--- a/.travis.yml
+++ b/.travis.yml
@@ -53,7 +53,7 @@ git:
 
 sudo: false
 
-dist: trusty
+dist: xenial
 
 addons:
   apt:
@@ -62,6 +62,7 @@ addons:
     - git
     - libgnome-keyring-dev
     - fakeroot
+    - libgconf-2-4
 
 stages:
   - test
